--- a/CryptoCactus.WebAPI/CryptoCactus.WebAPI.csproj
+++ b/CryptoCactus.WebAPI/CryptoCactus.WebAPI.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\CryptoCactus.Domail\CryptoCactus.Domail.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\index.html" />
+  </ItemGroup>
+
 </Project>
