--- a/CryptoCactus.WebAPI/CryptoCactus.WebAPI.csproj
+++ b/CryptoCactus.WebAPI/CryptoCactus.WebAPI.csproj
@@ -12,7 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CryptoCactus.Domail\CryptoCactus.Domail.csproj" />
+    <ProjectReference Include="..\CryptoCactus.Domail\CryptoCactus.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\index.html" />
   </ItemGroup>
 
   <ItemGroup>
