--- a/CryptoCactus.WebAPI/CryptoCactus.WebAPI.csproj
+++ b/CryptoCactus.WebAPI/CryptoCactus.WebAPI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\animation.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CryptoCactus.Domail\CryptoCactus.Domain.csproj" />
   </ItemGroup>
 
